--- a/index.html
+++ b/index.html
@@ -5,18 +5,9 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6" id='div01'>Simple Observer from a sequence of numbers</div>
-            <div class="col-md-6" id='div02'></div>
-        </div>
-        <div class="row">
-            <div class="col-md-6" id='div03'></div>
-            <div class="col-md-6" id='div04'></div>
-        </div>
-    </div>
+    <div id='menuContainer'></div>
     <script src="js/vendor.js"></script>
-    <script src="js/app.js"></script>
+    <script src="include_menu.js"></script>
 </body>
 
 </html>
